# gw-synth-flash-mcp

./: CLAUDE.md  Cargo.toml  README.md  README_JA.md
examples/: claude-code.mcp.json  vscode.mcp.json
src/: main.rs
