[package]
name = "gw-synth-flash-mcp"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
repository = "https://github.com/AkiyukiOkayasu/gw-synth-flash-mcp"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An unofficial MCP server for Gowin EDA CLI workflows (gw_sh, programmer_cli) on Windows 11."
keywords = ["gowin", "mcp", "fpga", "windows"]
categories = [
    "command-line-utilities",
    "development-tools::build-utils",
    "embedded",
]

[dependencies]
anyhow = "1.0.100"
rmcp = { version = "0.14.0", features = [
    "macros",
    "server",
    "client",
    "schemars",
    "transport-io",
    "transport-child-process",
] }
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "process",
    "io-util",
    "fs",
] }

[dev-dependencies]
# 追加のdev依存は増やさず、rmcp自身でスモークテストする

[[bin]]
name = "gw-synth-flash-mcp"
path = "src/main.rs"
